--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
+html,
+body,
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-size: 62.5%;
+
+}
+
 h1 {
     font-size: 50px;
 }
 
 body {
+    background-image: ;
+
     background-color: rgb(220, 228, 245);
-    font-size: 20px;
+    font-size: 120px;
     text-align: center;
     font-family: ;
+
 }
 
 .box {
@@ -14,12 +27,21 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     height: 500px;
+    margin: 0 5%;
 
 }
 
 .move {
     background-color: white;
     border-radius: 10px;
-    width: 30%;
-    height: 100px;
+    min-width: 30%;
+    max-width: 100%;
+    width: 100px;
+    height: 500px;
+    margin: 1%;
+}
+
+img {
+    width: 200px;
+
 }
