--- a/style.css
+++ b/style.css
@@ -10,16 +10,22 @@ body,
 
 h1 {
     font-size: 50px;
+   color: white;
+
+    
 }
 
 body {
-    background-image: ;
-
+    background-image: url(https://wallpapercave.com/wp/p4iaEa4.jpg);
     background-color: rgb(220, 228, 245);
-    font-size: 120px;
+    font-size: 110px;
     text-align: center;
     font-family: ;
 
+}
+
+p { 
+    font-size: small
 }
 
 .box {
@@ -29,6 +35,7 @@ body {
     height: 500px;
     margin: 0 5%;
 
+
 }
 
 .move {
@@ -37,8 +44,9 @@ body {
     min-width: 30%;
     max-width: 100%;
     width: 100px;
-    height: 500px;
+    height: 520px;
     margin: 1%;
+    border-style: solid;
 }
 
 img {
