--- a/style.css
+++ b/style.css
@@ -13,7 +13,11 @@ h1 {
     color: white;
 }
 
-@media body {
+@media 
+
+
+
+body {
     background-image: url(https://wallpapercave.com/wp/p4iaEa4.jpg);
     background-color: rgb(220, 228, 245);
     font-size: 110px;
