--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ img {
 .move:hover {
     transform: scale(1.1);
     transform: scaleX(-1);
-    backface-visibility: hidden
+    backface-visibility: hidden;
 }
 
 
