--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ p {
     transition: all 0.4s;
 }
 
+
 img {
     width: 200px;
     transition: all 5s;
@@ -59,6 +60,8 @@ img {
     transform: scale(1.1);
     transform: scaleX(-1);
     backface-visibility: hidden;
+    transition: 4s ease;
+
 }
 
 
