--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ p {
 
 h1:hover {
     padding-top: 21px;
-    font-family: 'Open-Sans', sans-serif;
+    font-family: 'Lucida Handwriting', cursive;
 }
 
 .box {
@@ -49,7 +49,6 @@ h1:hover {
     width: 100px;
     height: 520px;
     margin: 1%;
-    border-style: ;
     box-shadow: 0px 0px 20px white;
     transition: all 0.4s;
 }
@@ -57,7 +56,6 @@ h1:hover {
 .move:hover {
     background-color: rgb(207, 212, 224);
 }
-
 
 
 img {
@@ -70,7 +68,11 @@ img:hover {
     box-shadow: 5px 5px 10px black;
 }
 
-.box :hover {}
+
+h2:hover { 
+ text-decoration: underline;
+
+}
 
 #spinny {
     width: 100px;
@@ -95,20 +97,19 @@ img:hover {
     }
 }
 
-@media screen (max width: 900px) {
-    .box
-}
 
+a { 
+    color: aliceblue;
+}
 .bottom {
     font-size: 50%;
-<<<<<<< Updated upstream
     transition: color 1s;
-
-=======
-    transition: color 0.5s;
->>>>>>> Stashed changes
 }
 
 .bottom :hover {
-    color: aqua;
+    color: rgb(106, 239, 239);
 }
+
+
+  
+  
